[tool.poetry]
name = "one-tm-url-backend"
version = "0.1.0"
description = ""
authors = ["Alibek-dev <54788352+Alibek-dev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_cors = "^3.0.9"
peewee = "^3.13.3"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
